--- a/plugins/display/tasks/observer/database_datasize.yaml
+++ b/plugins/display/tasks/observer/database_datasize.yaml
@@ -12,8 +12,8 @@ task:
           FROM oceanbase.CDB_OB_TABLE_LOCATIONS a INNER JOIN oceanbase.__all_virtual_table_mgr b ON a.svr_ip = b.svr_ip
           AND a.svr_port = b.svr_port AND a.tenant_id = b.tenant_id AND a.LS_ID = b.LS_ID AND a.TABLET_ID = b.TABLET_ID
           inner join oceanbase.__all_tenant c on a.tenant_id=c.tenant_id WHERE a.role = 'LEADER'
-          AND  c.tenant_id = {tenant_id}  AND b.table_type >= 10 AND b.size > 0 AND a.TABLE_NAME NOT REGEXP '^__'
-          and a.database_name='{database_name}' GROUP BY a.TABLE_ID) group by database_name;"
+          AND  c.tenant_id = #{tenant_id}  AND b.table_type >= 10 AND b.size > 0 AND a.TABLE_NAME NOT REGEXP '^__'
+          and a.database_name='#{database_name}' GROUP BY a.TABLE_ID) group by database_name;"
         global: true
   - version: "[3.0.0.0, 4.0.0.0]"
     steps:
@@ -27,7 +27,7 @@ task:
           inner join
           oceanbase.gv$database b
           on a.database_id=b.database_id
-          where b.tenant_id={tenant_id} and b.database_name='{database_name}')b
+          where b.tenant_id=#{tenant_id} and b.database_name='#{database_name}')b
           on a.table_id=b.table_id
           where  a.role = 1
           group by a.tenant_id, b.database_name;"
