--- a/plugins/gather/tasks/obproxy/restart.yaml
+++ b/plugins/gather/tasks/obproxy/restart.yaml
@@ -11,7 +11,7 @@ task:
         ssh: "cat /proc/sys/kernel/core_pattern"
         global: false
       - type: ssh
-        ssh: "ls -lhrt ${obproxy_data_dir}"
+        ssh: "ls -lhrt #{obproxy_data_dir}"
         global: false
       - type: obproxy_log
         grep: ""
