--- a/plugins/gather/tasks/observer/backup_clean.yaml
+++ b/plugins/gather/tasks/observer/backup_clean.yaml
@@ -53,13 +53,13 @@ task:
         sql: "select * from oceanbase.CDB_OB_BACKUP_SET_DETAILS order by START_TIME desc"
         global: true
       - type: sql
-        sql: "select * from oceanbase.__all_backup_task_clean_history where gmt_create > ${from_time} and gmt_create < ${to_time} order by gmt_create desc;"
+        sql: "select * from oceanbase.__all_backup_task_clean_history where gmt_create > #{from_time} and gmt_create < #{to_time} order by gmt_create desc;"
         global: true
       - type: sql
-        sql: "select * from oceanbase.__all_backup_clean_info_history where gmt_create > ${from_time} and gmt_create < ${to_time} order by gmt_create desc;"
+        sql: "select * from oceanbase.__all_backup_clean_info_history where gmt_create > #{from_time} and gmt_create < #{to_time} order by gmt_create desc;"
         global: true
       - type: sql
-        sql: "select * from oceanbase.__all_rootservice_event_history where module='backup_clean' and gmt_create > ${from_time} and gmt_create < ${to_time} order by gmt_create desc;"
+        sql: "select * from oceanbase.__all_rootservice_event_history where module='backup_clean' and gmt_create > #{from_time} and gmt_create < #{to_time} order by gmt_create desc;"
         global: true
       - type: log
         grep: ""
@@ -106,34 +106,34 @@ task:
         sql: "show parameters like '%backup%';"
         global: true
       - type: sql
-        sql: "select * from oceanbase.CDB_OB_BACKUP_JOB_HISTORY where tenant_id=${tenant_id}"
+        sql: "select * from oceanbase.CDB_OB_BACKUP_JOB_HISTORY where tenant_id=#{tenant_id}"
         global: true
       - type: sql
         sql: "SELECT * FROM oceanbase.DBA_OB_ROOTSERVICE_EVENT_HISTORY WHERE module='backup_data' AND event ='start_backup_data';"
         global: true
       - type: sql
-        sql: "SELECT * FROM oceanbase.CDB_OB_BACKUP_TASKS where tenant_id=${tenant_id};"
+        sql: "SELECT * FROM oceanbase.CDB_OB_BACKUP_TASKS where tenant_id=#{tenant_id};"
         global: true
       - type: sql
-        sql: "SELECT * FROM oceanbase.__all_virtual_backup_schedule_task where tenant_id=${tenant_id}"
+        sql: "SELECT * FROM oceanbase.__all_virtual_backup_schedule_task where tenant_id=#{tenant_id}"
         global: true
       - type: sql
-        sql: "SELECT * from oceanbase.CDB_OB_BACKUP_JOB_HISTORY where STATUS = 'FAILED' and tenant_id=${tenant_id};"
+        sql: "SELECT * from oceanbase.CDB_OB_BACKUP_JOB_HISTORY where STATUS = 'FAILED' and tenant_id=#{tenant_id};"
         global: true
       - type: sql
-        sql: "SELECT * FROM oceanbase.CDB_OB_BACKUP_DELETE_POLICY where tenant_id=${tenant_id};"
+        sql: "SELECT * FROM oceanbase.CDB_OB_BACKUP_DELETE_POLICY where tenant_id=#{tenant_id};"
         global: true
       - type: sql
-        sql: "SELECT * FROM oceanbase.CDB_OB_BACKUP_DELETE_JOBS where tenant_id=${tenant_id}"
+        sql: "SELECT * FROM oceanbase.CDB_OB_BACKUP_DELETE_JOBS where tenant_id=#{tenant_id}"
         global: true
       - type: sql
-        sql: "SELECT * FROM oceanbase.CDB_OB_BACKUP_DELETE_TASKS where tenant_id=${tenant_id}"
+        sql: "SELECT * FROM oceanbase.CDB_OB_BACKUP_DELETE_TASKS where tenant_id=#{tenant_id}"
         global: true
       - type: sql
-        sql: "SELECT * FROM oceanbase.CDB_OB_BACKUP_DELETE_TASK_HISTORY where tenant_id=${tenant_id}"
+        sql: "SELECT * FROM oceanbase.CDB_OB_BACKUP_DELETE_TASK_HISTORY where tenant_id=#{tenant_id}"
         global: true
       - type: sql
-        sql: "SELECT * FROM oceanbase.CDB_OB_BACKUP_DELETE_JOB_HISTORY where tenant_id=${tenant_id}"
+        sql: "SELECT * FROM oceanbase.CDB_OB_BACKUP_DELETE_JOB_HISTORY where tenant_id=#{tenant_id}"
         global: true
       - type: log
         global: false
