--- a/conf/inner_config.yml
+++ b/conf/inner_config.yml
@@ -5,6 +5,7 @@ obdiag:
     file_number_limit: 50
     file_size_limit: 5G
     dis_rsa_algorithms: 0
+    strict_host_key_checking: 0
   logger:
     log_dir: ~/.obdiag/log
     log_filename: obdiag.log
