--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,7 @@ dependencies/python2/site-packages
 dependencies/python2/libs
 dependencies/python3/site-packages
 dependencies/python3/libs
-gather_pack_*
+obdiag_gather_pack_*
+obdiag_analyze_pack_*
+obdiag_rca*
+
