--- a/plugins/check/tasks/observer/version/old_version.yaml
+++ b/plugins/check/tasks/observer/version/old_version.yaml
@@ -7,6 +7,20 @@ task:
         set_value: observer_version
         verify: '[[ ! "#{observer_version}" == *"3.1."* ]] || [[ ! "#{observer_version}" == *"CE"* ]]'
         err_msg: 'Starting from June 30, 2024, OceanBase Database Community Edition V3.1.x will no longer receive any bug fixes or version updates.Please upgrade as soon as possible'
+    - type: ssh
+      ssh: "echo \"#{observer_version}\" | grep -oP '(?<=\()[^ ]+ \K[0-9]+\.[0-9]+\.[0-9]+\.[0-9]+'"
+      result:
+        set_value: observer_version
+        verify: '[[ ! "${observer_version}" == "4.0"* ]] && [[ ! "${observer_version}" == "4.1"* ]] && [[ ! "${observer_version}" == "4.2.2"* ]] && [[ ! "${observer_version}" == "4.3.0"* ]] && [[ ! "${observer_version}" == "4.3.1"* ]]'
+        err_msg: '#{observer_version} is not recommended, please upgrade to the obcluster'
+    - type: ssh
+      ssh: "echo \"#{observer_version}\" | awk -F. '{print $NF}'"
+      result:
+        set_value: observer_version_end_str
+        verify: '[[ "$observer_version" == "4.2.1"* && "$observer_version_end_str" -ge 5 ]] || [[ ! "$observer_version" == "4.2.1"* ]]'
+        err_msg: '#{observer_version} is not recommended, please upgrade to the obcluster'
+
+
 
 
 
